--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,12 +1,11 @@
 
-<img src="assets\ciudad.jpg"  style="background-repeat: no-repeat; height: 1000px; position: absolute; right: 0; top: 0; z-index: -100; opacity: 0.75;">
 
 <div class="row">
-    <div class="col" style="border: none; margin: none;">
-        <img class="animate__animated animate__backInUp" style="width: 390px; height: 395px;" src="assets\CHUNCHE.COM.png">
+    <div class="col resp" style="border: none; margin: none;">
+        <img class="animate__animated animate__backInUp img-chunche" style="width: 390px; height: 395px;" src="assets\CHUNCHE.COM.png">
     </div>
     <div class="col">
-        <mat-card class="animate__animated animate__slideInDown"> 
+        <mat-card class="animate__animated animate__slideInDown log-card"> 
             <mat-card-title>¡Inicia Sesión! </mat-card-title>
         
             <mat-card-content>
