--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -24,7 +24,7 @@
         <mat-icon>add_to_queue</mat-icon>
     </button>
 
-    <button mat-button [routerLink]="['/login']">
+    <button mat-button (click)="logout()">
             Cerrar Sesión
             <mat-icon>input</mat-icon>
     </button>
