--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -28,10 +28,10 @@
 <!--headin5_amrc ends here-->
 
 <ul class="footer_ul2_amrc">
-<li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@yarainsty<a href="#"></a></p></li>
+<li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@chunches_com<a href="#"></a></p></li>
 <li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@xeiccx<a href="#"></a></p></li>
-<li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@alexa_guadamuz43<a href="#"></a></p></li>
-<li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@obj.deivid<a href="#"></a></p></li>
+<!-- <li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@alexa_guadamuz43<a href="#"></a></p></li>
+<li><a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a><p>@obj.deivid<a href="#"></a></p></li> -->
 </ul>
 <!--footer_ul2_amrc ends here-->
 </div>
