--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -2,7 +2,8 @@
     <div class="col">
         <mat-card-title>Agregar Artículo:</mat-card-title>
         <mat-card-content class="col">
-            <form [formGroup]="form">
+
+            <form enctype="multipart/form-data" [formGroup]="form">
                 <mat-form-field appearance="outline">
                     <mat-label>Nombre Artículo</mat-label>
                     <input required matInput formControlName="titulo">
@@ -46,7 +47,7 @@
         </mat-card-actions>
     </div>
     
-    <div *ngIf="form.value.thumbImage" class="col">
-        <img  mat-card-img [src]="form.value.thumbImage">
+    <div *ngIf="form.value.imagen" class="col">
+        <img  mat-card-img [src]="form.value.imagen">
     </div>
 </mat-card>
