--- a/src/app/products/products-all/products-all.component.css
+++ b/src/app/products/products-all/products-all.component.css
@@ -10,12 +10,27 @@
     box-sizing: border-box;
     margin: 16px;
     cursor: pointer;
+    box-shadow: rgba(136, 172, 243, 0.25) 0px 10px 30px, rgba(0, 0, 0, 0.03) 0px 1px 1px,
+    rgba(47, 62, 96, 0.01) 0px 10px 20px, rgba(76, 102, 148, 0.13) 0px 1px 3px;
+    padding: 0;
 }
 
 .card-content > img{
-    width: 275px;
+    width: 300px;
     height: fit-content;
 }
+
+.mat-card-header{
+    background-color: #2bb673;
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+    color: white;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.body{
+    margin: 20px;
+}
+
 
 .card-content-search {
     width: 100%;
@@ -23,7 +38,10 @@
     margin: 20px;
     display: flex;
     justify-content: center;
-    background-color: #9fe6a0;
+    /* background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673); 
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);*/
+    box-shadow: rgba(136, 172, 243, 0.25) 0px 10px 30px, rgba(0, 0, 0, 0.03) 0px 1px 1px,
+    rgba(47, 62, 96, 0.01) 0px 10px 20px, rgba(76, 102, 148, 0.13) 0px 1px 3px;
 }
 
 .mat-success {
@@ -31,5 +49,17 @@
     color: #fff;
 }
 
+.mat-icon{
+    color: #2bb673;
+    font-weight: 400;
+    align-self: center;
+}
+.search{
+    width: 100%;
+    border: none;
+    background: none;
+    height: 40px;
+    outline: none;
+}
 
 /* INPUT*/
