--- a/src/app/shared/components/toolbar/toolbar.component.css
+++ b/src/app/shared/components/toolbar/toolbar.component.css
@@ -3,8 +3,17 @@
 }
 
 mat-toolbar{
-    background-color: #58D68D;;
-    color:white;
+    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    /*box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);*/
+    color: white;
+    padding: 40px;
+    transition: ease-in-out 1s;
+    
+}
+
+.light{
+    padding: 0;
+    transition: ease-in-out 1s;
 }
 
 
