--- a/src/app/shared/components/toolbar/toolbar.component.css
+++ b/src/app/shared/components/toolbar/toolbar.component.css
@@ -8,6 +8,8 @@ mat-toolbar{
     color: white;
     padding: 40px;
     transition: ease-in-out 1s;
+    box-shadow: rgba(136, 172, 243, 0.25) 0px 10px 30px, rgba(0, 0, 0, 0.03) 0px 1px 1px,
+    rgba(47, 62, 96, 0.01) 0px 10px 20px, rgba(76, 102, 148, 0.13) 0px 1px 3px;
     
 }
 
