Mis Articulos Works

--- a/src/app/products/product-add/product-add.component.css
+++ b/src/app/products/product-add/product-add.component.css
@@ -3,6 +3,13 @@
     justify-content: center;
 }
 
+.file-input {
+    display: none;
+  }
+
+.file-upload > button{
+    background-color: #25aae1 !important;
+}
 mat-card,
 form{
     margin: 10px;
