--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
         <mat-icon>account_box</mat-icon>
     </button>
     
-    <button mat-button [routerLink]="['/products', 'list']">
+    <button mat-button [routerLink]="['/products', 'list', id]">
         Mis Artículos
         <mat-icon>dashboard</mat-icon>
     </button>
