--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,32 +1,46 @@
-<mat-card class="row animate__animated animate__fadeInTopRight">
-
+<mat-card class= "row animate__animated animate__backInDown">
+    <div class="animate__animated animate__backInDown" class="col">
+        <img  mat-card-img src="http://127.0.0.1:8000{{img}}">
+    </div>
     <div class="col">
         <mat-card-title>Editar Artículo:</mat-card-title>
-        <mat-card-content>
-            <form [formGroup]="form">
+        <mat-card-content class="col">
+
+            <form enctype="multipart/form-data" [formGroup]="form">
                 <mat-form-field appearance="outline">
                     <mat-label>Nombre Artículo</mat-label>
-                    <input required matInput formControlName="title">
+                    <input required matInput formControlName="titulo">
                 </mat-form-field>
     
                 <mat-form-field appearance="outline">
                     <mat-label>Marca</mat-label>
-                    <input required matInput formControlName="brand">   
+                    <input required matInput formControlName="marca">   
                 </mat-form-field>
     
                 <mat-form-field appearance="outline">
                     <mat-label>Descripción</mat-label>
-                    <input required matInput formControlName="description">   
+                    <input required matInput formControlName="descripcion">   
                 </mat-form-field>
     
                 <mat-form-field appearance="outline">
                     <mat-label>Estado</mat-label>
-                    <input required matInput formControlName="status">   
+                    <input required type="number" max="10" min="1" matInput formControlName="estado">   
                 </mat-form-field>
     
+                <!-- <mat-form-field appearance="outline">
+                    <mat-label>Imagen</mat-label>
+                    <input required matInput formControlName="imagen">   
+                </mat-form-field> -->
+                
+                
+
                 <mat-form-field appearance="outline">
-                    <mat-label>URL imagen</mat-label>
-                    <input required matInput formControlName="thumbImage">   
+                    <mat-label>Categoría</mat-label>
+                    <mat-select formControlName="idcategoria">
+                         <mat-option *ngFor="let cat of categories" [value]="cat.idcategoria">  
+                            {{cat.nombrecategoria}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
             </form>
         </mat-card-content>
@@ -35,8 +49,6 @@
             <button (click)="cancel()" mat-raised-button class="btn-hover color-11">Cancelar</button>
         </mat-card-actions>
     </div>
-
-    <div *ngIf="form.value.thumbImage" class="col">
-        <img  mat-card-img [src]="form.value.thumbImage">
-    </div>
+    
+    
 </mat-card>
