--- a/src/app/products/products-list/products-list.component.css
+++ b/src/app/products/products-list/products-list.component.css
@@ -21,3 +21,15 @@ img{
     background-color: green;
     color: #fff;
 }
+
+.tab-container{
+    margin: 50px !important;
+}
+
+table{
+    border-radius: 15px !important;
+}
+
+.tab{
+    width: 50px !important;
+}
