--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,5 +1,5 @@
 <mat-card class= "row animate__animated animate__backInDown">
-    <div class="animate__animated animate__backInDown" class="col">
+    <div class="animate__animated animate__backInDown col cont">
         <img  mat-card-img src="http://127.0.0.1:8000{{img}}">
     </div>
     <div class="col">
