--- a/src/app/shared/components/toolbar/toolbar.component.css
+++ b/src/app/shared/components/toolbar/toolbar.component.css
@@ -18,5 +18,23 @@ mat-toolbar{
     transition: ease-in-out 1s;
 }
 
+.mat-menu-content > button{
+    color: white !important;
+}
+
+.mat-menu-content{
+    background: #25aae1 !important;
+}
+
+@media (max-width: 800px) {
+    .big {
+      display: none !important;
+    }
+}
+@media (min-width: 800px) {
+    .small {
+      display: none !important;
+    }
+}
 
 
