--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -10,7 +10,7 @@
         <mat-icon>menu</mat-icon>
     </button> -->
   
-    <button mat-button>
+    <button mat-button [routerLink]="['/products', 'profile']">
         {{user}}
         <mat-icon>account_box</mat-icon>
     </button>
