--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -42,6 +42,16 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Estado Entrega</mat-label>
+                    <mat-select formControlName="identrega">
+                         <mat-option *ngFor="let est of estados" [value]="est.identrega">  
+                            {{est.nombreentrega}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+
             </form>
         </mat-card-content>
         <mat-card-actions>
