--- a/src/app/products/products-all/products-all.component.html
+++ b/src/app/products/products-all/products-all.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="card-container">
     <div *ngFor="let product of products.reverse()| appFilter:searchText">
-        <mat-card style="text-align: center;" class="card-content animate__animated  animate__flipInX">
+        <mat-card *ngIf="product.identrega == 1" style="text-align: center;" class="card-content animate__animated  animate__flipInX">
             <mat-card-header>
                 <mat-card-title>{{product.titulo}}</mat-card-title>
                 <mat-card-subtitle style="color: white;">{{product.marca}}</mat-card-subtitle>
@@ -36,7 +36,7 @@
                 </mat-card-content>
         
                 <mat-card-actions>
-                    <button mat-raised-button class="all btn-hover color-9">Me interesa</button>
+                    <button mat-raised-button class="all btn-hover color-9" [routerLink]="['/products', 'detail', product.idproducto]">Me interesa</button>
                 </mat-card-actions>
             </div>
         </mat-card>
