--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -39,6 +39,28 @@
                 <mat-card-header class="donante-header">
                     <mat-card-title >Contacta al Donante</mat-card-title>
                 </mat-card-header>
+                <mat-card-content>
+                    <form [formGroup]="form">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Escríbe...</mat-label>
+                            <input class="mensaje" required matInput formControlName="mensaje">
+                        </mat-form-field>
+                    </form>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-raised-button><mat-icon>send</mat-icon></button>
+                </mat-card-actions>
+            </mat-card>
+            <mat-card class="donante">
+                <mat-card-header class="donante-header">
+                    <mat-card-title>Mensajes</mat-card-title>
+                </mat-card-header>
+            </mat-card>
+            <mat-card class="donante" *ngFor="let coment of coments">
+                <mat-card-title>Por {{coment.iduser}}</mat-card-title>
+                <mat-card-content>
+                    <p>{{coment.comentario}}</p>
+                </mat-card-content>
             </mat-card>
         </div>
     
